# voxel_engine

./: Cargo.toml  OPTIMIZATIONS.md  SPEC.md
.github/workflows/: build.yml
docs/: CHUNK_STORAGE.md  LOD_AND_LOADING.md  PAGED_RENDERING.md  RENDERING_ARCHITECTURE.md  V1_PLAN.md
src/: atmosphere.rs  camera.rs  lighting.wgsl  main.rs  render.rs  shadow.wgsl  sky.wgsl  taa.rs  voxel.wgsl
src/chunk/: demand.rs  generation.rs  loading.rs  meshing.rs  mod.rs
src/render/: atmosphere.rs  mod.rs  taa.rs
src/render/shaders/: fs_normal.wgsl  lighting.wgsl  shadow.wgsl  sky.wgsl  sky_sample.wgsl  taa.wgsl  voxel.wgsl  voxel_vertex.wgsl
src/render/shadow/: bitmask.rs  grid.rs  mod.rs  pass.rs
src/shadow/: gpu.rs  grid.rs  mod.rs  pass.rs
