[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
modul_core = { git = "https://github.com/EliiasG/modul" }
modul_render = { git = "https://github.com/EliiasG/modul" }
modul_asset = { git = "https://github.com/EliiasG/modul" }
modul_util = { git = "https://github.com/EliiasG/modul" }
bevy_ecs = "0.15"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
glam = "0.29"
fastnoise-lite = "1"
crossbeam-channel = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
